<resources>
    <string name="app_name">Movieum</string>
    <string name="textMovieHeader">Movie Header</string>
    <string name="topRated">Top Rated</string>
    <string name="showsByMostPeople">Shows that are being watched by most people.</string>
    <string name="popular">Popular</string>
    <string name="topRatedTextDescription">Top Rated is calculated using the rating percentage and the number of ratings.</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="youHaveNotAddedMovies">You have not added any movies to your favorite yet.</string>
    <string name="add_favorite_movie">Add Favorite Movie</string>
    <string name="movie_poster">Movie poster</string>
    <string name="release_date">Release date</string>
    <string name="language">Language</string>
    <string name="label_overview">Overview</string>
    <string name="cast">The Cast</string>
    <string name="trailers">Trailers</string>
    <string name="user_reviews">User Reviews</string>
    <string name="play_icon">Play icon</string>
    <string name="trailer_thumbnail">Trailer thumbnail</string>
    <string name="review_author_image">Review author image</string>
    <string name="text_no_connectivity">No Connection</string>
    <string name="text_connectivity">Back Online</string>
    <string name="image_transition_name">ImageTransition</string>
    <string name="search">search</string>
    <string name="banner_ad_unit_id">ca-app-pub-2946519738601551/9500054065</string>
</resources>