<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@color/black_background"
            android:orientation="vertical"
            tools:context=".ui.main.MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans"
                    android:text="@string/popular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/top_rated_dimen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:fontFamily="@font/google_sans"
                    android:text="@string/showsByMostPeople"
                    android:textColor="#787474"
                    android:textSize="@dimen/title_dimen" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularMovieRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_movie" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans"
                    android:text="@string/topRated"
                    android:textColor="@color/white"
                    android:textSize="@dimen/top_rated_dimen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:fontFamily="@font/google_sans"
                    android:text="@string/topRatedTextDescription"
                    android:textColor="#787474"
                    android:textSize="@dimen/title_dimen" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedMovieRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_movie" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/mainProgressBar"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</ScrollView>