<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_4"
    android:layout_marginTop="@dimen/dimen_4"
    android:layout_marginEnd="@dimen/dimen_4"
    android:layout_marginBottom="@dimen/dimen_4"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/dimen_4">

    <LinearLayout
        android:id="@+id/favoriteLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/movieImageView"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/dimen_4"
            android:layout_weight="3"
            android:contentDescription="@string/textMovieHeader"
            android:transitionName="@string/image_transition_name"
            tools:src="@tools:sample/avatars" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginBottom="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans"
                    android:textSize="@dimen/title_dimen"
                    android:textStyle="bold"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/movieOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:fontFamily="@font/google_sans"
                    android:maxLines="3"
                    android:textSize="@dimen/overview_dimen"
                    tools:text="@tools:sample/lorem" />

            </LinearLayout>

            <ImageView
                android:id="@+id/addToFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/add_favorite_movie"
                android:padding="@dimen/dimen_8"
                android:src="@drawable/ic_heart_selected" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>